@@ -53,7 +53,7 @@
 
 <!-- This text is in reStucturedText format, so it may look a bit odd. -->
 <!-- See http://docutils.sourceforge.net/rst.html for details. -->
-<p>This file was last updated on February 3, 2010</p>
+<p>This file was last updated on February 4, 2010</p>
 <p>Please note that this file records news for the associated development
 branch and that each development branch has its own NEWS file. See the
 ChangeLog file for full details.</p>
@@ -85,6 +85,8 @@ ChangeLog file for full details.</p>
 <p>Bug fixes:</p>
 <blockquote>
 <ul class="simple">
+<li>Fix &quot;double free&quot; error when using gm import -frame.</li>
+<li>XPM does not support RGBA color syntax, so return RGB instead.</li>
 <li>The display '-update' option was only working in conjunction with
 the '-delay' option with a delay setting of 2 or greater.</li>
 <li>For formats which support multiple frames, output with +adjoing to
@@ -1553,7 +1555,7 @@ package; otherwise see <a class="reference external" href="http://www.graphicsma
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2010-02-03 17:51 UTC.
+Generated on: 2010-02-04 18:22 UTC.
 
 </div>
 </body>
